--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,17 +37,19 @@
         android:layout_marginTop="16dp"
         android:textStyle="bold"
         android:id="@+id/notesTextView"/>
-    
+
     <ScrollView
         android:id="@+id/notesScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/notesContainer"
-        android:orientation="vertical"/>
+        android:layout_weight="1"
+        >
+
+        <LinearLayout
+            android:id="@+id/notesContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
 
     </ScrollView>
 
